--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,11 @@
 
 buildscript {
     repositories {
-        google()
-        maven {url 'https://maven.google.com'}
+        maven { url 'https://maven.google.com' }
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-beta1'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -15,9 +14,8 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+        maven { url 'https://maven.google.com' }
         jcenter()
-        maven {url 'https://maven.google.com'}
     }
 }
 
